--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,21 @@
 <resources>
     <string name="app_name">Basic_Geo_Quiz_App</string>
+    <string name="title_activity_quiz_login">Sign in</string>
+    <string name="prompt_first">First Name</string>
+    <string name="prompt_last">Last Name</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="prompt_repeat_password">Repeat Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="register">Register for an Account</string>
+    <string name="register_short">Register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome !"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
+    <string name="question_text"> Question Text</string>
+    <string name="stat_text">User\'s Statistics</string>
+    <string name="stat_correct_text">User\'s Correct Answers</string>
+    <string name="stat_incorrect_text">User\'s Incorrect Answers</string>
 </resources>
